[package]
name = "redbcli"
version = "0.1.8"
edition = "2021"
authors = ["jokemanfire <hu.dingyang@zte.com.cn>"]
description = "RedbCLI is a command-line tool for managing and operating Redb databases. It provides various commands to create, delete, query, and edit database tables."
keywords = ["redb", "cli"]
repository = "https://github.com/jokemanfire/redbcli"
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
shlex = "1.3.0"
redb = "2.2.0"
serde_json = "1.0"
rustyline = "15.0.0"
tempfile = "3.14.0"
comfy-table = "7"